Added missing script

--- a/Unsolved/AzureWebServiceA/AzureCarRetailDBWebService/AzureCarRetailDBWebService.csproj
+++ b/Unsolved/AzureWebServiceA/AzureCarRetailDBWebService/AzureCarRetailDBWebService.csproj
@@ -192,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="CarRetailDBScript.txt" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
