Updates relating to removal of RelayCommand
Updates relating to removal of RelayCommand

--- a/Unsolved/ExamAdmV23/ExamAdmV23/ExamAdmV23.csproj
+++ b/Unsolved/ExamAdmV23/ExamAdmV23/ExamAdmV23.csproj
@@ -95,18 +95,19 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BaseClasses\DeleteCommandBase.cs" />
     <Compile Include="BaseClasses\DomainClassBase.cs" />
     <Compile Include="BaseClasses\ItemViewModelBase.cs" />
-    <Compile Include="BaseClasses\ModelBase.cs" />
+    <Compile Include="BaseClasses\CatalogBase.cs" />
     <Compile Include="BaseClasses\ViewModelFactoryBase.cs" />
+    <Compile Include="DomainClasses\DeleteCommand.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="BaseClasses\MasterViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelayCommand.cs" />
     <Compile Include="DomainClasses\Student.cs" />
-    <Compile Include="DomainClasses\StudentModel.cs" />
+    <Compile Include="DomainClasses\StudentCatalog.cs" />
     <Compile Include="DomainClasses\StudentItemViewModel.cs" />
     <Compile Include="DomainClasses\StudentMasterDetailsViewModel.cs" />
     <Compile Include="DomainClasses\StudentMasterViewModel.cs" />
