--- a/Unsolved/ExamAdmV21/ExamAdmV21/ExamAdmV21.csproj
+++ b/Unsolved/ExamAdmV21/ExamAdmV21/ExamAdmV21.csproj
@@ -100,7 +100,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
-    <Compile Include="StudentCollection.cs" />
+    <Compile Include="StudentCatalog.cs" />
     <Compile Include="StudentItemViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
