--- a/Unsolved/ExamAdmV22/ExamAdmV22/ExamAdmV22.csproj
+++ b/Unsolved/ExamAdmV22/ExamAdmV22/ExamAdmV22.csproj
@@ -95,16 +95,16 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DeleteCommand.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelayCommand.cs" />
     <Compile Include="Student.cs" />
-    <Compile Include="StudentCollection.cs" />
-    <Compile Include="StudentMasterDetailsViewModel.cs" />
+    <Compile Include="StudentCatalog.cs" />
     <Compile Include="StudentItemViewModel.cs" />
+    <Compile Include="StudentMasterDetailsViewModel.cs" />
     <Compile Include="StudentMasterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
