--- a/Unsolved/ExamAdmV22/ExamAdmV22/ExamAdmV22.csproj
+++ b/Unsolved/ExamAdmV22/ExamAdmV22/ExamAdmV22.csproj
@@ -95,17 +95,17 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DeleteCommand.cs" />
-    <Compile Include="MainPage.xaml.cs">
+    <Compile Include="ViewModel\DeleteCommand.cs" />
+    <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="StudentCatalog.cs" />
-    <Compile Include="StudentItemViewModel.cs" />
-    <Compile Include="StudentMasterDetailsViewModel.cs" />
-    <Compile Include="StudentMasterViewModel.cs" />
+    <Compile Include="Model\Student.cs" />
+    <Compile Include="Model\StudentCatalog.cs" />
+    <Compile Include="ViewModel\StudentDetailsViewModel.cs" />
+    <Compile Include="ViewModel\StudentItemViewModel.cs" />
+    <Compile Include="ViewModel\StudentMasterDetailsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -133,7 +133,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainPage.xaml">
+    <Page Include="View\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
