--- a/Unsolved/GenericCatalog/GenericCatalog/GenericCatalog.csproj
+++ b/Unsolved/GenericCatalog/GenericCatalog/GenericCatalog.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{480F666A-D9A4-472D-BA59-249284E7B7D0}</ProjectGuid>
+    <ProjectGuid>{6FEEE786-6687-4D8D-A0AA-F816FE99AD7B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>LambdaAnimals</RootNamespace>
-    <AssemblyName>LambdaAnimals</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>GenericCatalog</RootNamespace>
+    <AssemblyName>GenericCatalog</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
@@ -42,7 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dog.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="CarCatalog.cs" />
+    <Compile Include="Computer.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="EmployeeCatalog.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
