--- a/Unsolved/DiceGame/DiceGame/DiceGame.csproj
+++ b/Unsolved/DiceGame/DiceGame/DiceGame.csproj
@@ -48,6 +48,7 @@
     <Compile Include="InsertCodeHere.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomNumberGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
