--- a/Unsolved/CryptoCrowns/CryptoCrowns/CryptoCrowns.csproj
+++ b/Unsolved/CryptoCrowns/CryptoCrowns/CryptoCrowns.csproj
@@ -54,8 +54,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="CryptoLibrary\" />
+    <Content Include="CryptoLibrary\CryptoCrownLib.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
