--- a/Unsolved/NoteBookV10/NoteBook/NoteBook.csproj
+++ b/Unsolved/NoteBookV10/NoteBook/NoteBook.csproj
@@ -96,16 +96,14 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="FilePersistency.cs" />
+    <Compile Include="IDataSource.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Note.cs" />
-    <Compile Include="NoteDetailsViewModel.cs" />
-    <Compile Include="NoteItemViewModel.cs" />
-    <Compile Include="NoteMasterDetailsViewModel.cs" />
-    <Compile Include="NoteMasterViewModel.cs" />
+    <Compile Include="NoteDataViewModel.cs" />
+    <Compile Include="NotePageViewModel.cs" />
     <Compile Include="NoteModel.cs" />
-    <Compile Include="NoteSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayCommand.cs" />
   </ItemGroup>
