--- a/Unsolved/ExamAdmV21/ExamAdmV21/ExamAdmV21.csproj
+++ b/Unsolved/ExamAdmV21/ExamAdmV21/ExamAdmV21.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="StudentCatalog.cs" />
-    <Compile Include="StudentItemViewModel.cs" />
+    <Compile Include="StudentDataViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
