--- a/Unsolved/PvPSimulator/PvPSimulator/PvPSimulator.csproj
+++ b/Unsolved/PvPSimulator/PvPSimulator/PvPSimulator.csproj
@@ -96,14 +96,10 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Commands\AttackCommand.cs" />
-    <Compile Include="PlayerFactory\DefaultPlayerFactory.cs" />
-    <Compile Include="Player\IPlayerInfo.cs" />
-    <Compile Include="Player\Paladin.cs" />
-    <Compile Include="Player\Wizard.cs" />
-    <Compile Include="Tactics\NeutralTactics.cs" />
-    <Compile Include="Tactics\DefensiveTactics.cs" />
+    <Compile Include="PlayerFactory\RandomisedPlayerFactory.cs" />
+    <Compile Include="Players\IPlayerInfo.cs" />
     <Compile Include="Tactics\ITacticsInfo.cs" />
-    <Compile Include="Tactics\OffensiveTactics.cs" />
+    <Compile Include="Tactics\TacticsData.cs" />
     <Compile Include="Tactics\TacticsInfo.cs" />
     <Compile Include="Tactics\TacticsType.cs" />
     <Compile Include="Utility\BattleLog.cs" />
@@ -111,21 +107,18 @@
     <Compile Include="ViewModel\BattleViewModel.cs" />
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Config\GameConfiguration.cs" />
-    <Compile Include="Player\IPlayer.cs" />
+    <Compile Include="Players\IPlayer.cs" />
     <Compile Include="PlayerFactory\IPlayerFactory.cs" />
-    <Compile Include="Player\Knight.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Utility\NumberGenerator.cs" />
-    <Compile Include="Player\Player.cs" />
-    <Compile Include="Player\PlayerInfo.cs" />
-    <Compile Include="ViewModel\PlayerInfoViewModel.cs" />
+    <Compile Include="Players\Player.cs" />
+    <Compile Include="Players\PlayerInfo.cs" />
+    <Compile Include="ViewModel\PlayerViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\ResetCommand.cs" />
     <Compile Include="Config\Setup.cs" />
-    <Compile Include="Player\Warrior.cs" />
-    <Compile Include="PlayerFactory\WarriorVsKnightFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -162,6 +155,7 @@
       <Version>6.0.8</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
