--- a/Unsolved/SimpleGeometry/SimpleGeometry/SimpleGeometry.csproj
+++ b/Unsolved/SimpleGeometry/SimpleGeometry/SimpleGeometry.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Circle.cs" />
     <Compile Include="InsertCodeHere.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="Shape.cs" />
   </ItemGroup>
   <ItemGroup>
