--- a/Unsolved/BioDemo/BioDemo/BioDemo.csproj
+++ b/Unsolved/BioDemo/BioDemo/BioDemo.csproj
@@ -99,24 +99,40 @@
     <Compile Include="Data\Domain\Movie.cs" />
     <Compile Include="Data\Domain\Show.cs" />
     <Compile Include="Data\Domain\Theater.cs" />
+    <Compile Include="Data\Domain\Ticket.cs" />
+    <Compile Include="ViewModels\Commands\CreateTicketCommand.cs" />
+    <Compile Include="ViewModels\Commands\LoadCommand.cs" />
+    <Compile Include="ViewModels\Commands\QuitCommand.cs" />
+    <Compile Include="ViewModels\Commands\SaveCommand.cs" />
     <Compile Include="ViewModels\Data\MovieDataViewModel.cs" />
     <Compile Include="ViewModels\Data\ShowDataViewModel.cs" />
     <Compile Include="ViewModels\Data\TheaterDataViewModel.cs" />
+    <Compile Include="ViewModels\Data\TicketDataViewModel.cs" />
+    <Compile Include="ViewModels\Flow\BuyTicketFlowViewModelA.cs" />
+    <Compile Include="ViewModels\Flow\BuyTicketFlowViewModelEnd.cs" />
+    <Compile Include="ViewModels\Flow\BuyTicketFlowViewModelStart.cs" />
     <Compile Include="ViewModels\Page\MoviePageViewModel.cs" />
     <Compile Include="ViewModels\Page\ShowPageViewModel.cs" />
     <Compile Include="ViewModels\Page\TheaterPageViewModel.cs" />
+    <Compile Include="ViewModels\Page\TicketPageViewModel.cs" />
     <Compile Include="Views\App\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\App\DomainModel.cs" />
     <Compile Include="Models\Base\CatalogAppBase.cs" />
-    <Compile Include="Models\Doman\MovieCatalog.cs" />
-    <Compile Include="Models\Doman\ShowCatalog.cs" />
-    <Compile Include="Models\Doman\TheaterCatalog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\App\AppViewModel.cs" />
     <Compile Include="ViewModels\Base\DataViewModelAppBase.cs" />
     <Compile Include="ViewModels\Base\PageViewModelAppBase.cs" />
+    <Compile Include="Views\Flow\BuyTicketViewA.xaml.cs">
+      <DependentUpon>BuyTicketViewA.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Flow\BuyTicketViewEnd.xaml.cs">
+      <DependentUpon>BuyTicketViewEnd.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Flow\BuyTicketViewStart.xaml.cs">
+      <DependentUpon>BuyTicketViewStart.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Domain\MovieView.xaml.cs">
       <DependentUpon>MovieView.xaml</DependentUpon>
     </Compile>
@@ -125,6 +141,9 @@
     </Compile>
     <Compile Include="Views\Domain\TheaterView.xaml.cs">
       <DependentUpon>TheaterView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Domain\TicketView.xaml.cs">
+      <DependentUpon>TicketView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -164,6 +183,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\Flow\BuyTicketViewA.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Flow\BuyTicketViewEnd.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Flow\BuyTicketViewStart.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Domain\MovieView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -176,10 +207,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Domain\TicketView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.1.4</Version>
+      <Version>6.1.5</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
@@ -219,6 +254,7 @@
       <HintPath>Libs\ViewModel.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
